python/testData/highlighting/typeVarTupleWithBoundsReported.py
def foo[*Ts: <error descr="Type variable tuples cannot have constraints or upper bounds">str</error>](): ...